fixed spacing for login, menu & singup buttons

--- a/frontend/styles/site/menu.less
+++ b/frontend/styles/site/menu.less
@@ -43,7 +43,7 @@
 		background-color: transparent;
 
 		.item {
-			padding: 10px 5px;
+			padding: 10px 1px;
 
 			.username {
 				text-shadow: @chef-menu-over-shadow;
@@ -58,7 +58,7 @@
 	#menu {
 		width: 62px;
 		position: relative;
-		top: 2px;
+		top: 0px;
 
 		@media only screen and (max-width : 767px) {
 			width: 56px;
